# calgopp

./: CMakePresets.json
.github/workflows/: calgopp_ci.yml
lib/: CMakeLists.txt
lib/approximation/: CMakeLists.txt  approximation.cpp
lib/approximation/include/calgopp/approximation/: approximation.h
lib/function/include/calgopp/function/: LinearFunction.h
test/approximation/: CMakeLists.txt  test.cpp
